--- a/tpl/index.html
+++ b/tpl/index.html
@@ -8,6 +8,10 @@
 
 <script>
 	
+	
+	function tab(){
+		alert(1);
+	}
 	function clearNoNum(obj)  
 	{  
 	 obj.value = obj.value.replace(/[^\d.]/g,"");  //清除“数字”和“.”以外的字符  
