--- a/tpl/index.html
+++ b/tpl/index.html
@@ -20,6 +20,11 @@
 	 obj.value = obj.value.replace(".","$#$").replace(/\./g,"").replace("$#$",".");  
 	 obj.value=obj.value.replace(/^(\-)*(\d+)\.(\d\d).*$/,'$1$2.$3');//只能输入两个小数  
 	}  
+
+
+	function testb(){
+		alert('test');
+	}
 </script>
 </body>
 </html>
