--- a/tpl/index.html
+++ b/tpl/index.html
@@ -21,9 +21,8 @@
 	 obj.value=obj.value.replace(/^(\-)*(\d+)\.(\d\d).*$/,'$1$2.$3');//只能输入两个小数  
 	}  
 
-
 	function testb(){
-		alert('test');
+		alert('新分支哦!!!');
 	}
 </script>
 </body>
