--- a/tpl/index.html
+++ b/tpl/index.html
@@ -4,6 +4,8 @@
 	<title></title>
 </head>
 <body>
+
+dsdsd
 <input name="priceInfoVO.basePrice" id="basePrice" type="text" onkeyup="clearNoNum(this);" class="text w100 texin J_pircetc">
 
 <script>
